# F1-race-prediction-pipeline

./: .gitignore  README.md  app.py  main.py  pyproject.toml  update_pipeline.sh  update_pipeline_incremental.sh
app/: app.py  main.py
artifacts/: race_predictor.pkl  scaler.pkl
data/features/: driver_features.csv
data/processed/: clean_results.csv  features.csv  features_multiseason.csv  ingestion_log.txt  ingestion_summary.json  multiseason_results.csv  race_results.csv
data/raw/: F1_driver.csv  race_results.csv
logs/: predictions.csv  predictions.jsonl
src/features/: build_features.py  build_upcoming_features.py  current_drivers.py  engineer_features.py  ingest_ergast.py  ingest_fastf1.py  ingest_hybrid.py  ingest_multiseason.py  simple_upcoming.py  test_fastf1.py
src/ingestion/: fetch_data.py  fetch_upcoming_qualifying.py
src/models/: predict_current.py  predict_upcoming.py  simple_predict.py  train_model.py  train_model_incremental.py
src/processing/: clean_data.py
