[project]
name = "formula1-race-prediction-project"
version = "0.1.0"
description = "Formula 1 race prediction pipeline using ingestion, processing, feature engineering, and ML models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "fastf1>=3.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "psycopg2-binary>=2.9.12",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.46.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
default = [
    "pandas",
    "scikit-learn",
    "xgboost",
    "requests",
    "matplotlib",
    "seaborn",
    "fastapi",
    "uvicorn",
    "psycopg2-binary"
]

dev = [
    "pytest",
    "black",
    "flake8"
]
